# insightvm-python

./: .docker-test.sh  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.test  MIGRATION.md  Pipfile  README.md  SECURITY.md  SECURITY_FIXES.md  api_function_readme.md  api_functions.py  api_pa_xdr.py  api_pa_xdr_auth.py  api_r7_auth.py  api_r7_isvm.py  bandit-results.sarif  coverage.json  logger.py  pa_cortex_xdr_get_endpoint.py  pa_cortex_xdr_r7_insightvm_asset_compare.py  pyproject.toml  requirements.txt  setup.py  test_pa_cortex_xdr_r7_insightvm_asset_compare.py
.codacy/: codacy.yaml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/instructions/: codacy.instructions.md
.github/workflows/: bandit.yml  codacy.yml  codeql.yml  devskim.yml  greetings.yml  jekyll-gh-pages.yml  pylint.yml  secret-scan.yml  test-coverage.yml
OLD/: add_smtp_alerts.py  api_functions.py  pa_cortex_xdr_r7_insightvm_asset_compare.py
docs/: API_ENDPOINT_REFERENCE.md  API_REFERENCE.md  API_REVIEW_FINDINGS.md  API_STANDARDIZATION.md  EXAMPLES.md  PALOALTO_XDR.md  REPORTS_API.md  SCANS_API.md  SCAN_ENGINES_API.md  SCAN_TEMPLATES_API.md  SITE_MANAGEMENT.md  SOLUTIONS_API.md  UI_IMPROVEMENTS.md  USERS_API.md  VULNERABILITIES_API.md  VULNERABILITY_EXCEPTIONS_API.md
platform/paloalto/cortex_xdr/: api_pa_xdr.py
platform/rapid7/: api_r7_assets.py  api_r7_auth.py  api_r7_isvm.py
src/: __init__.py  client.py
src/paloalto/: __init__.py  api_pa_xdr.py  api_pa_xdr_auth.py
src/paloalto/cortex_xdr/: __init__.py
src/rapid7/: __init__.py  api_r7_api.py  api_r7_asset_group.py  api_r7_assets.py  api_r7_auth.py  api_r7_auth_class.py  api_r7_auth_console.py  api_r7_endpoints.py  api_r7_isvm.py  api_r7_isvm_get_assets.py  api_r7_isvm_sonar_add.py  api_r7_status_codes.py  auth.py  client.py  config.py  constants.py  ui.py
src/rapid7/api/: __init__.py  api-3-resolved.json  api-3-resolved.yaml  api-3-swagger.json  api-3-swagger.yaml  api-v3.json  api-v3_default.yaml  asset_groups.py  assets.py  base.py  openapi3_0.json  reports.py  scan_engines.py  scan_templates.py  scans.py  sites.py  solutions.py  sonar_queries.py  users.py  vulnerabilities.py  vulnerability_exceptions.py
src/rapid7/tools/: create_sonar_queries.py  install_insight_agent.py  install_scan_assistant.py  site_management.py
tests/: __init__.py  conftest.py  test_api_standardization.py  test_auth.py  test_client.py  test_config.py  test_ui.py
tests/test_rapid7/: __init__.py  test_assets.py  test_base.py  test_reports.py  test_scans.py  test_sites.py
trial_and_error/: get_insight_agents.py  insight_agent_platform_test.py  insight_agents.py
(+371 files in other folders)
