[tool.poetry]
name = "insightvm-python"
version = "0.1.0"
description = ""
authors = ["Matt <matt@mattwyen.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "insightvm_python"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
mlogconfig = "^0.2.3"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
